fix(style): Double link margins when two links are stacked on mobile. mozilla/fxa-content-server#5471) r=vladikoff
fixes mozilla/fxa-content-server#4655

--- a/packages/fxa-content-server/app/styles/modules/_custom-rows.scss
+++ b/packages/fxa-content-server/app/styles/modules/_custom-rows.scss
@@ -144,7 +144,7 @@ ul.links {
   .links .right {
     display: block;
     float: none;
-    margin: 5px auto;
+    margin: 10px auto;
     max-width: 100%;
     text-align: center;
     width: fit-content;
